Adding some prototype widgets
Developed by interns in summer 2025.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.3/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Mathematical Interactives</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .tool-link {
+            display: block;
+            padding: 10px;
+            margin: 5px 0;
+            background: #f0f0f0;
+            text-decoration: none;
+            color: #333;
+            border-radius: 5px;
+        }
+        .tool-link:hover {
+            background: #e0e0e0;
+        }
+    </style>
+</head>
+<body>
+    <h1>HTML Mathematical Interactives</h1>
 
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="dynamic-geometry.js"></script>
-    <script src="sketch.js"></script>
-  </body>
-</html>
+    <h2>Calculus</h2>
+    <a href="epsilon_delta_limits.html" class="tool-link">Epsilon-Delta Limits</a>
+    <a href="epsilon_delta_continuity.html" class="tool-link">Epsilon-Delta Continuity</a>
+    <a href="riemann.html" class="tool-link">Riemann Sum Explorer</a>
+    <a href="euler.html" class="tool-link">Euler's Method Visualizer</a>
+    <a href="taylor2.html" class="tool-link">Taylor Series Visualizer</a>
+    <a href="mvt_game.html" class="tool-link">MVT Game (Hard)</a>
+    <a href="mvt_game_easy.html" class="tool-link">MVT Game</a>
+    <a href="mvt2.html" class="tool-link">MVT Visualizer</a>
+
+    <h2>Algebra 1</h2>
+    <a href="function_transformations.html" class="tool-link">Function Transformations Interactive</a>
+    <a href="parabolas.html" class="tool-link">Parabola Geometric Definition</a>
+    <a href="midpoint_recovery.html" class="tool-link">Midpoint Recovery Challenge</a>
+    <a href="midpoint_challenge.html" class="tool-link">Midpoint Challenge</a>
+    <a href="midpoint_puzzle_game.html" class="tool-link">Midpoint Puzzle Game</a>
+    <a href="composition.html" class="tool-link">Function Composition Puzzle Game</a>
+
+    <h2>Precalculus</h2>
+    <a href="conics.html" class="tool-link">Conic Sections Geometric Definitions</a>
+    <a href="complex_puzzle_game.html" class="tool-link">Complex Puzzle Game</a>
+    <a href="mobius_widget.html" class="tool-link">Mobius Transformation Widget</a>
+
+
+    
+</body>
+</html> 
