--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Mathematical Interactives</title>
+    <title>Lumina Demos</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>HTML Mathematical Interactives</h1>
+    <h1>Lumina Demos</h1>
 
     <h2>Calculus</h2>
     <a href="epsilon_delta_limits.html" class="tool-link">Epsilon-Delta Limits</a>
