--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     <a href="complex_puzzle_game.html" class="tool-link">Complex Puzzle Game</a>
     <a href="mobius_widget.html" class="tool-link">Mobius Transformation Widget</a>
 
+    <h2>Geometry</h2>
+    <a href="orthocenter-explore.html" class="tool-link">Orthocenter Explorer</a>
+    <a href="funky-area.html" class="tool-link">Funky Area Engine</a>
+
 
     
 </body>
