--- a/funky-area.html
+++ b/funky-area.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main>
+      <div class="hint">Hold Shift to Rotate.</div>
     </main>
     <script src="funky-area.js"></script>
   </body>
