--- a/orthocenter-explore.html
+++ b/orthocenter-explore.html
@@ -10,7 +10,7 @@
   <body>
     <main>
     </main>
-    <script src="orthocenter-explore.js"></script>
+    <script src="dynamic-geometry.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
