--- a/orthocenter-explore.html
+++ b/orthocenter-explore.html
@@ -11,6 +11,6 @@
     <main>
     </main>
     <script src="dynamic-geometry.js"></script>
-    <script src="sketch.js"></script>
+    <script src="sketch2.js"></script>
   </body>
 </html>
